--- a/src/app/courses/javascript/lesssion/developer-console/developer-console.component.html
+++ b/src/app/courses/javascript/lesssion/developer-console/developer-console.component.html
@@ -1,1 +1,52 @@
-<p>developer-console works!</p>
+<div>
+    <p class="paragraph-description">Developer Console is an essential tool for web developers, providing a range of
+        functionalities to debug, inspect, and optimize web pages. In this brief guide, we'll explore the features and
+        capabilities of Developer Console, focusing on its usage within the context of JavaScript development.</p>
+    <h2 class="content-sub-heading" id="Overview_of_Developer_Console">1. Overview of Developer Console:</h2>
+    <p class="sub-paragraph-description">Developer Console is an integral part of modern web browsers' developer tools.
+        It offers a variety of functionalities to assist developers in analyzing and debugging web applications.
+        Accessed via keyboard shortcuts or through browser menus, Developer Console provides a suite of tools for
+        inspecting HTML elements, monitoring network activity, debugging JavaScript code, and more.</p>
+
+    <h2 class="content-sub-heading">2. Accessing Developer Console:</h2>
+    <p class="sub-paragraph-description">Most web browsers provide Developer Console as part of their developer tools
+        suite. Commonly, you can access it by right-clicking on a web page and selecting "Inspect" or by pressing F12 or
+        Ctrl+Shift+I. Once opened, Developer Console typically displays several tabs, each catering to different aspects
+        of web development.</p>
+
+    <h2 class="content-sub-heading" id="Inspecting_and_Modifying_Elements">3. Inspecting and Modifying Elements:</h2>
+    <p class="sub-paragraph-description">One of the primary functions of Developer Console is to inspect and modify HTML
+        elements in real-time. Developers can select elements on the page and view their properties, styles, and event
+        listeners. Additionally, they can modify these properties and styles directly within the console to see
+        immediate visual changes on the page.</p>
+
+    <h2 class="content-sub-heading">Example:</h2>
+    <prismcode [code]="code" language="javascript"></prismcode>
+
+    <h2 class="content-sub-heading" id="Debugging_JavaScript">4. Debugging JavaScript:</h2>
+    <p class="sub-paragraph-description">Developer Console provides robust tools for debugging JavaScript code.
+        Developers can set breakpoints, step through code execution, inspect variable values, and analyze the call
+        stack. These features are invaluable for identifying and resolving errors in complex JavaScript applications.
+    </p>
+    <h2 class="content-sub-heading">Example:</h2>
+    <prismcode [code]="code1" language="javascript"></prismcode>
+
+    <h2 class="content-sub-heading">5. Monitoring Network Activity:</h2>
+    <p class="sub-paragraph-description">Another crucial feature of Developer Console is its ability to monitor network
+        activity. Developers can view HTTP requests and responses, inspect request headers and payloads, and analyze
+        network performance metrics. This functionality aids in optimizing web page loading times and diagnosing
+        network-related issues.</p>
+
+    <h2 class="content-sub-heading">6. Performance Analysis:</h2>
+    <p class="sub-paragraph-description">Developer Console offers tools for profiling and analyzing the performance of
+        web pages. Developers can measure loading times, identify rendering bottlenecks, and optimize code to improve
+        overall performance. By utilizing these tools, developers can ensure that their web applications deliver a
+        smooth and responsive user experience.</p>
+
+    <h2 class="content-sub-heading" id="Developer_Console_Conclusion">Conclusion:</h2>
+    <p class="sub-paragraph-description">In conclusion, Developer Console is a powerful tool for web developers,
+        offering a wide range of functionalities to debug, inspect, and optimize web pages. By mastering the
+        capabilities of Developer Console, developers can streamline their development workflow, identify and fix issues
+        more efficiently, and ultimately deliver better-performing web applications.</p>
+
+</div>
