--- a/src/app/shared/components/rsidebar/rsidebar.component.scss
+++ b/src/app/shared/components/rsidebar/rsidebar.component.scss
@@ -21,6 +21,8 @@
         }
         .active{
             background-color: #ced4da;
+            border-left: 2px solid green;
+            border-right: 2px solid green;
         }
     }
 }
